Time Tracker Developer Org/src/objects/Time_Tracker_Log__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Id__c</fullName>
        <externalId>true</externalId>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Log2__c</fullName>
        <label>Log2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <externalId>true</externalId>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Console Toolkit</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Tracker_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Time Tracker Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Level__c</columns>
        <columns>Log__c</columns>
        <columns>Log2__c</columns>
        <columns>Object_Id__c</columns>
        <columns>Source__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My</fullName>
        <columns>NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Level__c</columns>
        <columns>Log__c</columns>
        <columns>Log2__c</columns>
        <columns>Object_Id__c</columns>
        <columns>User__c</columns>
        <columns>Source__c</columns>
        <filterScope>Mine</filterScope>
        <label>My</label>
    </listViews>
    <nameField>
        <displayFormat>L{0}</displayFormat>
        <label>Time Tracker Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Tracker Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>